@@ -1,6 +1,7 @@
 Revision history for POE-Component-IRC-Plugin-Eval
 
 {{$NEXT}}
+    - Skip all tests if JSON::Any can't be loaded
 
 0.06  Fri Apr 1 23:27:39 GMT 2011
     - Make the colors slightly less annoying
